[gd_scene load_steps=37 format=2]

[ext_resource path="res://scenes/player/projectiles/PlayerProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/VaporFalcon.gd" type="Script" id=2]
[ext_resource path="res://models/VaporFalcon.tres" type="ArrayMesh" id=3]
[ext_resource path="res://scenes/player/audio/weaponLevel01/Stage_1_Note_4.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/player/audio/AudioStreamPlayer3D.gd" type="Script" id=5]
[ext_resource path="res://scenes/player/audio/weaponLevel01/Stage_1_Note_3.mp3" type="AudioStream" id=6]
[ext_resource path="res://sprites/LoadingParticle.png" type="Texture" id=7]
[ext_resource path="res://sprites/ParryParticle.png" type="Texture" id=8]
[ext_resource path="res://scenes/player/ParryArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/player/audio/weaponLevel01/Stage_1_Note_2.mp3" type="AudioStream" id=10]
[ext_resource path="res://scenes/player/audio/weaponLevel01/Stage_1_Note_1.mp3" type="AudioStream" id=11]
[ext_resource path="res://scenes/player/audio/hitSound/Hit_2.mp3" type="AudioStream" id=12]
[ext_resource path="res://scenes/player/audio/hitSound/Hit_3.mp3" type="AudioStream" id=13]
[ext_resource path="res://scenes/player/audio/hitSound/Hit_1.mp3" type="AudioStream" id=14]
[ext_resource path="res://scenes/player/audio/hitSound/Explosion_1.mp3" type="AudioStream" id=15]

[sub_resource type="CapsuleShape" id=6]
radius = 0.698371
height = 0.392443

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.352941, 0.458824, 0.517647, 1 )
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShipMesh:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShipMesh:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.05311e-09, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShipMesh:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShipMesh:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:rotation_degrees:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath(".:rotation_degrees:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath(".:rotation_degrees:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "blowback"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ShipMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.4 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShipMesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 4.05311e-09, 0 ), Vector3( 71.343, -30.766, -17.149 ), Vector3( 90, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ShipMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShipMesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 0.435275, 0.267943, 1.5157 ),
"update": 0,
"values": [ Vector3( 90, 4.05311e-09, 0 ), Vector3( -178.262, -83.828, 0 ), Vector3( -260.464, -360, -9.02 ), Vector3( -262.084, -360, -9.02 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShipMesh:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.001, 0.001, 0.001 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "parry"
length = 0.75
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_state_to_move"
} ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rotation_degrees:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.15, -389, 762, -0.15, 275, 0.05, -106, 720, -0.1, -1, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.75 )
}

[sub_resource type="SpatialMaterial" id=22]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 7 )

[sub_resource type="Gradient" id=31]
offsets = PoolRealArray( 0.416526, 0.939292, 1 )
colors = PoolColorArray( 0.966338, 0.0144229, 0.0144229, 1, 0.952158, 0.474165, 0, 1, 0.895288, 0.975595, 0.0187215, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 31 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.308892, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.728549, 0.990991 ), 0.0, 0.0, 0, 0, Vector2( 0.99844, 0.0675676 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="Curve" id=20]
_data = [ Vector2( 0, 0.238919 ), 0.0, -2.00805, 0, 0, Vector2( 1, 1 ), -1.8378, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=23]
trail_divisor = 4
trail_size_modifier = SubResource( 21 )
emission_shape = 1
emission_sphere_radius = 1.5
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 30.0
angular_velocity_random = 1.0
tangential_accel = 0.6
scale = 2.5
scale_random = 0.5
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )
anim_speed = 7.86

[sub_resource type="QuadMesh" id=24]

[sub_resource type="SpatialMaterial" id=25]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 8 )

[sub_resource type="Gradient" id=26]
offsets = PoolRealArray( 0, 0.911765, 1 )
colors = PoolColorArray( 0.157782, 1, 0.782866, 1, 0.948068, 0.549107, 0.960938, 1, 0.40494, 0.359808, 0.9375, 1 )

[sub_resource type="GradientTexture" id=27]
gradient = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
trail_divisor = 4
trail_size_modifier = SubResource( 21 )
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 30.0
angular_velocity_random = 1.0
tangential_accel = 0.6
scale = 2.5
scale_random = 0.5
scale_curve = SubResource( 15 )
color_ramp = SubResource( 27 )
anim_speed = 7.86

[sub_resource type="QuadMesh" id=29]

[node name="VaporFalcon" type="KinematicBody" groups=["player"]]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
projectile = ExtResource( 1 )
parry_area = ExtResource( 9 )
notes_in_measure = [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 4 ) ]
player_hit_sounds = [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ) ]
explosion_sound = ExtResource( 15 )

[node name="ShipMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 7.07401e-11, -3.09215e-18, 0, -4.37114e-08, -1, -7.07401e-11, 1, -4.37114e-08, 0, 0, 0 )
mesh = ExtResource( 3 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="SimpleWeapon" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.56042 )

[node name="DoubleWeapon" type="Spatial" parent="."]

[node name="WeaponsPos" type="Position3D" parent="DoubleWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.957627, 0, -1.0673 )

[node name="WeaponsPos2" type="Position3D" parent="DoubleWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.938702, 0, -1.0673 )

[node name="TrippleWeapon" type="Spatial" parent="."]

[node name="WeaponsPos" type="Position3D" parent="TrippleWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.97036, 0, -1.07437 )

[node name="WeaponsPos2" type="Position3D" parent="TrippleWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.930662, 0, -1.07437 )

[node name="WeaponsPos3" type="Position3D" parent="TrippleWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.57024 )

[node name="MaxWeapon" type="Spatial" parent="."]

[node name="WeaponsPos" type="Position3D" parent="MaxWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.938253, 0, -1.07437 )

[node name="WeaponsPos2" type="Position3D" parent="MaxWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -1.074 )

[node name="WeaponsPos3" type="Position3D" parent="MaxWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1.074 )

[node name="WeaponsPos4" type="Position3D" parent="MaxWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.967423, 0, -1.07437 )

[node name="WeaponMesh" type="Spatial" parent="."]
visible = false

[node name="MaxWeapon" type="MeshInstance" parent="WeaponMesh"]
transform = Transform( 0.0516093, 0, 0, 0, -2.18314e-08, -0.1, 0, 0.215869, -2.62459e-08, -0.5, 0, -0.652 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MaxWeapon2" type="MeshInstance" parent="WeaponMesh"]
transform = Transform( 0.0516093, 0, 0, 0, -2.18314e-08, -0.1, 0, 0.215869, -2.62459e-08, 0.5, 0, -0.652 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/blowback = SubResource( 9 )
anims/death = SubResource( 10 )
anims/parry = SubResource( 19 )

[node name="DeathTimeOut" type="Timer" parent="."]
wait_time = 2.0

[node name="Explosion" type="Particles" parent="."]
material_override = SubResource( 22 )
emitting = false
amount = 60
lifetime = 2.0
one_shot = true
speed_scale = 2.0
process_material = SubResource( 23 )
draw_pass_1 = SubResource( 24 )

[node name="Parry" type="Particles" parent="."]
material_override = SubResource( 25 )
emitting = false
amount = 50
lifetime = 0.6
one_shot = true
speed_scale = 2.0
process_material = SubResource( 28 )
draw_pass_1 = SubResource( 29 )

[node name="ParryTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = -8.0
script = ExtResource( 5 )

[connection signal="timeout" from="DeathTimeOut" to="." method="_on_death_timeout_timeout"]
[connection signal="timeout" from="ParryTimer" to="." method="_on_parry_timer_timeout"]
